<resources>
    <string name="app_name">N[AR]VA</string>
    <string name="button">Button</string>
    <string name="but">but</string>
    <string name="find_a_guide">Find a guide</string>
    <string name="discover">Discover</string>
    <string name="aleks">Aleks</string>
    <string name="home">Home</string>
    <string name="tour">Tour</string>
    <string name="profile">Profile</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="tours">Tours</string>
    <string name="woohoo">Woohoo!</string>
    <string name="let_s_make_history">Let\'s make history</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="start">START</string>
    <string name="textview">TextView</string>
    <string name="title_here">Title Here</string>
    <string name="google_maps_API__key" templateMergeStrategy="preserve" translatable="false">AIzaSyAu1bQLyJ6YeeT7eEzqtdtkOfMrEkUr-cU</string>
    <string name="Location">Code</string>
    <string name="add_new_location">Add new location</string>
    <string name="pick_place">Choose a place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="location">Narva</string>
    <string name="write_your_tour_code">Write your tour code:</string>
    <string name="name">Name</string>
    <string name="enter">Enter</string>
</resources>
