<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#405fe5"
    android:orientation="vertical"
    tools:context=".Choose_Location">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="212dp"
        android:layout_height="72dp"
        android:layout_marginTop="56dp"
        android:paddingLeft="6dp"
        android:paddingTop="22dp"
        android:text="@string/write_your_tour_code"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/autoCompleteTextView"
        android:layout_width="240dp"
        android:layout_height="69dp"
        android:background="@drawable/back"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/Location"
        android:gravity="left|center"
        android:paddingLeft="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <Button
        android:id="@+id/button7"
        android:layout_width="174dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:background="#33cc33"
        android:text="@string/let_s_go"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
        app:layout_constraintVertical_bias="0.0" />

</LinearLayout>